--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
-    "start": "node dist/server.js",
-    "initdb": "ts-node src/initDb.ts"
+  "build": "tsc",
+  "start": "node dist/server.js",
+  "initdb": "ts-node src/initDb.ts"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
