mas archivos para arranque automatico

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,8 +1,8 @@
 {
   "scripts": {
-  "build": "tsc",
-  "start": "node dist/server.js",
-  "initdb": "ts-node src/initDb.ts"
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "initdb": "ts-node src/initDb.ts"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
@@ -10,6 +10,9 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
-    "@types/pg": "^8.15.6"
+    "@types/node": "^24.10.1",
+    "@types/pg": "^8.15.6",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
