--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -1,15 +1,14 @@
 {
   "compilerOptions": {
-    "target": "ES2020",                // versión moderna de JS
-    "module": "commonjs",              // Node usa CommonJS
-    "moduleResolution": "node",        // resolución de módulos estilo Node
-    "rootDir": "./src",                // carpeta de entrada
-    "outDir": "./dist",                // carpeta de salida
-    "strict": true,                    // chequeos estrictos
-    "esModuleInterop": true,           // permite usar import con CommonJS
-    "forceConsistentCasingInFileNames": true,
+    "target": "ES2020",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "rootDir": "./src",
+    "outDir": "./dist",
+    "strict": true,
+    "esModuleInterop": true,
     "skipLibCheck": true,
-    "types": ["node"]                  // incluye definiciones de Node
+    "types": ["node"]
   },
   "include": ["src"]
 }
