--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,10 +6,13 @@
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "express": "^5.2.1",
+    "node-fetch": "^3.3.2",
     "pg": "^8.16.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
+    "@types/express": "^5.0.6",
     "@types/node": "^24.10.1",
     "@types/pg": "^8.15.6",
     "ts-node": "^10.9.2",
