--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "express": "^5.2.1",
+    "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
     "pg": "^8.16.3"
   },
