--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
@@ -13,6 +14,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.6",
     "@types/node": "^24.10.1",
     "@types/pg": "^8.15.6",
